--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
           <img src="https://cdn03.ciceksepeti.com/cicek/kcm30641048-1/L/tt-su-gecirmez-banyoda-kullanilabilen-vakumlu-bluetooth-hoparlor-kcm30641048-3-7c0ebca53b96460aa3fc25d237208c7d.jpg" alt="Hoparlör 3">
         </div>
         <h2>Su Geçirmez Bluetooth Hoparlör</h2>
-        <p class="price">449 TL</p>
+        <p class="price">
+  <span class="old-price">699 TL</span>
+  <span class="new-price">449 TL</span>
+</p>
+
         <p class="description">
           Bu su geçirmez Bluetooth hoparlör, banyoda veya dış mekanda rahatça kullanılabilir. Vakumlu tasarımı sayesinde düz yüzeylere kolayca tutunur. Yüksek ses kalitesi ile müziğin keyfini çıkarın!
         </p>
