--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="product-section" id="products">
       <div class="product-container">
         <div class="product-images">
-          <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcTvYbO198x7Ypg0siYC6_PiX1SpPs5ihziKfcy2iS_07_AKtDynkB0y8PMb1QU3ZDon-WlTaNH5ZCsc94yO_4oTGTwy3XfQGixpeJxaBXftnVUxInBVY9j3jw" alt="Hoparlör 1" class="active-img">
+          <img src="https://cdn03.ciceksepeti.com/cicek/kcs60078178-1/L/tt-su-gecirmez-banyoda-kullanilabilen-vakumlu-bluetooth-hoparlor-kcm30641048-4-3cd47a1d816a42b1afec42c69fffaa74.jpg">
           
         </div>
         <h2>Su Geçirmez Bluetooth Hoparlör</h2>
