--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="product-section" id="products">
       <div class="product-container">
         <div class="product-images">
-          <img src="https://www.toptankale.com/img/products/1orgzoom-72aa169.webp" class="active-img">
+          <img src="https://cdn03.ciceksepeti.com/cicek/kcs60078178-1/L/tt-su-gecirmez-banyoda-kullanilabilen-vakumlu-bluetooth-hoparlor-kcm30641048-4-3cd47a1d816a42b1afec42c69fffaa74.jpg" class="active-img">
         </div>
         <h2>Su Geçirmez Bluetooth Hoparlör</h2>
         <p class="price">
