--- a/index.html
+++ b/index.html
@@ -7,30 +7,24 @@
   <title>YAGO - Dropshipping</title>
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/jpeg" href="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBwgHBgkIBwgKCgkLDRYPDQwMDRsUFRAWIB0iIiAdHx8kKDQsJCYxJx8fLT0tMTU3Ojo6Iys/RD84QzQ5OjcBCgoKDQwNGg8PGjclHyU3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3N//AABEIAJQAnQMBEQACEQEDEQH/.../9k=">
+  <link rel="icon" type="image/jpeg" href="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBwgHBgkIBwgKCgkLDRYPDQwMDRsUFRAWIB0iIiAdHx8kKDQsJCYxJx8fLT0tMTU3Ojo6Iys/RD84QzQ5OjcBCgoKDQwNGg8PGjclHyU3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3N//AABEIAJQAnQMBEQACEQEDEQH/.../9k=">
 
-  <!-- iOS / SAFARI AYARLARI -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="format-detection" content="telephone=no">
 
-  <!-- FONT -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- STILLER -->
   <style>
-    /* RESET */
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Inter', sans-serif; }
+    * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
     body { background:#f8f9fa; color:#212529; }
     a { text-decoration:none; color:inherit; }
 
-    /* HEADER */
     header { display:flex; justify-content:space-between; align-items:center; padding:20px 5%; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,0.05); position:sticky; top:0; z-index:100; }
     header .logo h1 { font-weight:700; font-size:1.5rem; color:#111; }
     header nav button { background:#ff6b6b; color:#fff; border:none; padding:10px 20px; border-radius:8px; cursor:pointer; font-weight:600; transition:0.3s; }
     header nav button:hover { background:#ff4757; }
 
-    /* PRODUCT SECTION */
     .product-section { display:flex; justify-content:center; align-items:flex-start; padding:50px 5%; }
     .product-container { background:#fff; padding:30px; border-radius:15px; box-shadow:0 4px 20px rgba(0,0,0,0.08); max-width:900px; width:100%; display:flex; flex-wrap:wrap; gap:30px; }
     .product-images { flex:1; min-width:280px; display:flex; flex-direction:column; gap:10px; }
@@ -54,32 +48,22 @@
     #buyNow { background:#ff6b6b; color:#fff; }
     #buyNow:hover { background:#ff4757; }
 
-    /* CART PANEL */
     .cart-panel { position:fixed; top:0; right:-100%; width:350px; height:100%; background:#fff; box-shadow:-5px 0 20px rgba(0,0,0,0.1); transition:0.5s; z-index:200; display:flex; flex-direction:column; }
     .cart-panel.open { right:0; }
+
     .panel-header { display:flex; justify-content:space-between; align-items:center; padding:20px; border-bottom:1px solid #f1f1f1; }
-    .panel-header h2 { font-size:1.2rem; }
-    .panel-header button { background:none; border:none; font-size:1.3rem; cursor:pointer; }
     .panel-content { flex:1; padding:20px; overflow-y:auto; }
     .panel-footer { padding:20px; border-top:1px solid #f1f1f1; font-weight:600; display:flex; flex-direction:column; gap:10px; }
 
-    /* USER REVIEWS */
     .reviews { max-width:900px; margin:50px auto; padding:20px; background:#fff; border-radius:15px; box-shadow:0 4px 20px rgba(0,0,0,0.08); }
     .review { border-bottom:1px solid #f1f1f1; padding:15px 0; }
     .review:last-child { border-bottom:none; }
-    .review p { margin-bottom:5px; }
     .review .user { font-weight:600; color:#ff6b6b; }
     .review .rating { color:#ffb400; }
 
-    /* FOOTER */
     footer { background:#fff; padding:30px 5%; margin-top:50px; text-align:center; border-top:1px solid #e9ecef; }
-    footer p { margin-bottom:15px; font-size:0.9rem; color:#495057; }
-    footer .socials { display:flex; justify-content:center; gap:20px; }
-    footer .socials a { color:#495057; font-weight:600; transition:0.3s; }
-    footer .socials a:hover { color:#ff6b6b; }
 
     @media(max-width:768px){
-      .product-section { padding:30px 5%; }
       .product-container { flex-direction:column; }
     }
   </style>
@@ -87,165 +71,109 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <h1>YAGO</h1>
-    </div>
-    <nav>
-      <button id="cartToggle">Sepetim 🛒</button>
-    </nav>
-  </header>
+<header>
+  <div class="logo"><h1>YAGO</h1></div>
+  <nav><button id="cartToggle">Sepetim 🛒</button></nav>
+</header>
 
-  <!-- ÜRÜN BÖLÜMÜ -->
-  <main>
-    <section class="product-section" id="products">
-      <div class="product-container">
-        <div class="product-images">
-          <img src="https://cdn03.ciceksepeti.com/cicek/kcs60078178-1/L/tt-su-gecirmez-banyoda-kullanilabilen-vakumlu-bluetooth-hoparlor-kcm30641048-4-3cd47a1d816a42b1afec42c69fffaa74.jpg" class="active-img">
+<main>
+<section class="product-section">
+<div class="product-container">
+
+<div class="product-images">
+  <img src="https://sc04.alicdn.com/kf/Hd6d6f3f6c8e349f0b8b8f44b4cdbf1b9r.jpg" class="active-img">
+</div>
+
+<h2>USB Şarjlı Elektrikli Mutfak Bulaşık Fırçası</h2>
+
+<p class="price">
+  <span class="old-price">1.099 TL</span>
+  <span class="new-price">549 TL</span>
+</p>
+
+<div class="quantity">
+  <label for="qty">Adet:</label>
+  <input type="number" id="qty" value="1" min="1">
+</div>
+
+<div class="buttons">
+  <button id="addToCart">Sepete Ekle</button>
+  <button id="buyNow">Satın Al</button>
+</div>
+
+<p class="description">
+  USB şarjlı elektrikli mutfak fırçası ile yağ ve kirleri zahmetsizce temizleyin.
+  Güçlü döner başlığı sayesinde tencere, tava, lavabo ve tezgah temizliği artık çok daha kolay.
+  Ergonomik tutuş, suya dayanıklı yapı ve uzun pil ömrü ile mutfakta büyük kolaylık sağlar.
+</p>
+
+</div>
+</section>
+
+<section class="reviews">
+  <h2 style="margin-bottom:20px;">Müşteri Yorumları</h2>
+  <div class="review">
+    <p class="user">Elif A. <span class="rating">★★★★★</span></p>
+    <p>Bulaşık yıkamak artık çok daha hızlı, gerçekten işe yarıyor.</p>
+  </div>
+  <div class="review">
+    <p class="user">Mehmet D. <span class="rating">★★★★☆</span></p>
+    <p>Şarjı uzun gidiyor, özellikle tencerelerde çok başarılı.</p>
+  </div>
+  <div class="review">
+    <p class="user">Zeynep K. <span class="rating">★★★★★</span></p>
+    <p>Elimi yormuyor, mutfakta en sevdiğim ürün oldu.</p>
+  </div>
+</section>
+</main>
+
+<aside id="cartPanel" class="cart-panel">
+  <div class="panel-header">
+    <h2>Sepetim</h2>
+    <button id="closeCart">✕</button>
+  </div>
+  <div class="panel-content" id="panelContent"><p>Sepetiniz boş.</p></div>
+  <div class="panel-footer" id="panelFooter"></div>
+</aside>
+
+<footer>
+  <p>© 2026 YAGO. Tüm hakları saklıdır.</p>
+</footer>
+
+<script>
+  const cartToggle=document.getElementById('cartToggle');
+  const cartPanel=document.getElementById('cartPanel');
+  const closeCart=document.getElementById('closeCart');
+  const addToCart=document.getElementById('addToCart');
+  const buyNow=document.getElementById('buyNow');
+  const panelContent=document.getElementById('panelContent');
+  const panelFooter=document.getElementById('panelFooter');
+  const qtyInput=document.getElementById('qty');
+  const productTitle=document.querySelector('.product-container h2');
+  const productPriceEl=document.querySelector('.new-price');
+  const productImg=document.querySelector('.product-images .active-img');
+
+  cartToggle.onclick=()=>cartPanel.classList.add('open');
+  closeCart.onclick=()=>cartPanel.classList.remove('open');
+
+  addToCart.onclick=()=>{
+    const qty=parseInt(qtyInput.value);
+    const price=parseInt(productPriceEl.textContent.replace(/\D/g,''));
+    const total=qty*price;
+    panelContent.innerHTML=`
+      <div style="display:flex;gap:10px;">
+        <img src="${productImg.src}" style="width:60px;border-radius:8px;">
+        <div>
+          <p style="font-weight:600;">${productTitle.textContent}</p>
+          <p>${qty} x ${price} TL = ${total} TL</p>
         </div>
-        <h2>Su Geçirmez Bluetooth Hoparlör</h2>
-        <p class="price">
-          <span class="old-price">898 TL</span>
-          <span class="new-price">449 TL</span>
-        </p>
-        <div class="quantity">
-          <label for="qty">Adet:</label>
-          <input type="number" id="qty" value="1" min="1">
-        </div>
-        <div class="buttons">
-          <button id="addToCart">Sepete Ekle</button>
-          <button id="buyNow">Satın Al</button>
-        </div>   
-        <p class="description">
-          Bu su geçirmez Bluetooth hoparlör, banyoda veya dış mekanda rahatça kullanılabilir. Vakumlu tasarımı sayesinde düz yüzeylere kolayca tutunur. Yüksek ses kalitesi ile müziğin keyfini çıkarın!
-        </p>
-      </div>
-    </section>
+      </div>`;
+    panelFooter.innerHTML=`<p>Toplam: ${total} TL</p>`;
+    cartPanel.classList.add('open');
+  };
 
-    <!-- USER REVIEWS -->
-    <section class="reviews">
-      <h2 style="margin-bottom:20px;">Müşteri Yorumları</h2>
-      <div class="review">
-        <p class="user">Ayşe K. <span class="rating">★★★★★</span></p>
-        <p>Harika bir hoparlör! Ses kalitesi mükemmel ve su geçirmiyor.</p>
-      </div>
-      <div class="review">
-        <p class="user">Emre T. <span class="rating">★★★★☆</span></p>
-        <p>Beklediğimden daha iyi çıktı, banyoda kullanmak çok pratik.</p>
-      </div>
-      <div class="review">
-        <p class="user">Selin D. <span class="rating">★★★★★</span></p>
-        <p>Tasarımı çok şık, ayrıca vakumlu olması harika!</p>
-      </div>
-      <div class="review">
-        <p class="user">Murat Y. <span class="rating">★★★★☆</span></p>
-        <p>Ürün kaliteli ama biraz ağır. Genel olarak memnunum.</p>
-      </div>
-      <div class="review">
-        <p class="user">Zeynep A. <span class="rating">★★★★★</span></p>
-        <p>Kargo çok hızlı geldi, ürün tam olarak fotoğraflardaki gibi.</p>
-      </div>
-      <div class="review">
-        <p class="user">Can B. <span class="rating">★★★★★</span></p>
-        <p>Kesinlikle tavsiye ederim! Fiyatına değer bir ürün.</p>
-      </div>
-    </section>
-  </main>
+  buyNow.onclick=()=>addToCart.click();
+</script>
 
-  <!-- SAĞ PANEL -->
-  <aside id="cartPanel" class="cart-panel">
-    <div class="panel-header">
-      <h2 id="panelTitle">Sepetim</h2>
-      <button id="closeCart">✕</button>
-    </div>
-    <div class="panel-content" id="panelContent">
-      <p>Sepetiniz boş.</p>
-    </div>
-    <div class="panel-footer" id="panelFooter"></div>
-  </aside>
-
-  <footer>
-    <p>© 2026 YAGO. Tüm hakları saklıdır.</p>
-    <div class="socials">
-      <a href="#">Instagram</a>
-      <a href="#">Facebook</a>
-      <a href="#">Twitter</a>
-    </div>
-  </footer>
-
-  <!-- JS -->
-  <script>
-    const cartToggle = document.getElementById('cartToggle');
-    const cartPanel = document.getElementById('cartPanel');
-    const closeCart = document.getElementById('closeCart');
-    const addToCart = document.getElementById('addToCart');
-    const buyNow = document.getElementById('buyNow');
-    const panelContent = document.getElementById('panelContent');
-    const panelFooter = document.getElementById('panelFooter');
-    const qtyInput = document.getElementById('qty');
-    const productTitle = document.querySelector('.product-container h2');
-    const productPriceEl = document.querySelector('.new-price');
-    const productImg = document.querySelector('.product-images .active-img');
-
-    cartToggle.addEventListener('click', () => {
-      cartPanel.classList.add('open');
-    });
-
-    closeCart.addEventListener('click', () => {
-      cartPanel.classList.remove('open');
-    });
-
-    addToCart.addEventListener('click', () => {
-      const qty = parseInt(qtyInput.value);
-      const price = parseInt(productPriceEl.textContent.replace(/\D/g,''));
-      const total = qty * price;
-
-      panelContent.innerHTML = `
-        <div style="display:flex; gap:10px; align-items:center; margin-bottom:10px;">
-          <img src="${productImg.src}" alt="Ürün" style="width:60px; border-radius:8px;">
-          <div>
-            <p style="font-weight:600;">${productTitle.textContent}</p>
-            <p>${qty} x ${price} TL = ${total} TL</p>
-          </div>
-        </div>
-      `;
-
-      panelFooter.innerHTML = `
-        <p>Toplam: ${total} TL</p>
-        <button id="checkoutBtn" style="
-          width:100%; 
-          padding:12px 0; 
-          border:none; 
-          border-radius:8px; 
-          background:#ff6b6b; 
-          color:#fff; 
-          font-weight:600; 
-          cursor:pointer;
-        ">Ödemeye Geç</button>
-      `;
-
-      const checkoutBtn = document.getElementById('checkoutBtn');
-      checkoutBtn.addEventListener('click', () => {
-        window.location.href = `https://www.shopier.com/yagoshop/44059142?quantity=${qty}`;
-      });
-
-      cartPanel.classList.add('open');
-    });
-
-    buyNow.addEventListener('click', () => {
-      const qty = parseInt(qtyInput.value);
-      window.location.href = `https://www.shopier.com/yagoshop/44059142?quantity=${qty}`;
-    });
-
-    const productImages = document.querySelectorAll('.product-images img');
-    productImages.forEach(img => {
-      img.addEventListener('click', () => {
-        document.querySelector('.product-images .active-img').classList.remove('active-img');
-        img.classList.add('active-img');
-        productImg.src = img.src;
-      });
-    });
-  </script>
 </body>
 </html>
