--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div class="product-container">
 
 <div class="product-images">
-  <img src="https://sc04.alicdn.com/kf/Hd6d6f3f6c8e349f0b8b8f44b4cdbf1b9r.jpg" class="active-img">
+  <img src="https://m.media-amazon.com/images/I/61IHGusnAmL._AC_SX679_.jpg" class="active-img">
 </div>
 
 <h2>USB Şarjlı Elektrikli Mutfak Bulaşık Fırçası</h2>
