--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <h2>USB Şarjlı Elektrikli Mutfak Bulaşık Fırçası</h2>
 
 <p class="price">
-  <span class="old-price">1.099 TL</span>
-  <span class="new-price">549 TL</span>
+  <span class="old-price">558 ₺</span>
+  <span class="new-price">279 ₺</span>
 </p>
 
 <div class="quantity">
